# tmuxdeck

./: .env.example  .gitignore  Makefile  PLAN.md  README.md  docker-compose.yml  flake.nix
apple/TmuxDeck/: project.yml
apple/TmuxDeck/TmuxDeck/: ContentView.swift  Info.plist  TmuxDeckApp.swift
apple/TmuxDeck/TmuxDeck.xcodeproj/: project.pbxproj
backend/: Dockerfile  pyproject.toml
backend/app/: auth.py  config.py  main.py  middleware.py  store.py
backend/app/api/: auth.py  bridges.py  containers.py  debug_log.py  files.py  images.py  notifications.py  sessions.py  settings.py  templates.py
backend/app/schemas/: __init__.py
backend/app/services/: bridge_manager.py  debug_log.py  docker_manager.py  notification_manager.py  telegram_bot.py  tmux_manager.py
backend/app/ws/: bridge.py  terminal.py
backend/tests/: conftest.py  test_auth.py  test_create_container.py
bridge/: Makefile  README.md  pyproject.toml
bridge/tests/: test_bridge.py  test_config.py
bridge/tmuxdeck_bridge/: __init__.py  __main__.py  bridge.py  config.py  terminal.py
docker/templates/: basic-dev.dockerfile  claude-worker.dockerfile
docs/: backend-performance-spec.md
frontend/: index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  httpClient.ts
frontend/src/components/: ConfirmDialog.tsx  ContainerNode.tsx  FoldedContainerPreview.tsx  KeyboardHelp.tsx  Layout.tsx  NewContainerDialog.tsx  PinScreen.tsx  SessionItem.tsx  SessionSwitcher.tsx  SettingsTabs.tsx  Sidebar.tsx  TemplateEditor.tsx  Terminal.tsx  TerminalPool.test.tsx  TerminalPool.tsx  (+1 more)
scripts/: tmuxdeck-hook-notification  tmuxdeck-hook-prompt  tmuxdeck-hook-stop  tmuxdeck-install  tmuxdeck-install-hooks  tmuxdeck-notify
(+63 files in other folders)
