[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tmuxdeck-bridge"
version = "0.1.0"
description = "TmuxDeck bridge agent — connects remote tmux to TmuxDeck backend"
requires-python = ">=3.10"
dependencies = ["websockets>=12.0"]

[project.optional-dependencies]
docker = ["docker>=7.0"]
dev = [
    "ruff>=0.8",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.scripts]
tmuxdeck-bridge = "tmuxdeck_bridge.__main__:main"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
